added functional alarm clock

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
 
-  <div class='clock'>
+  <div class="clock">
 
-    <div class='date'>
-      <p id='date'></p>
+    <div class="date">
+      <p id="date"></p>
     </div>
 
-    <div class='time'>
-      <p id='time'></p>
+    <div class="time">
+      <p id="time"></p>
     </div>
 
-    <div class='alarm'>
+    <div class="alarm">
       <label for="alarm-time">Set Alarm For:</label>
       <input id="alarm-time" type="time">
       <p id="set-alarm"></p>
