--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Alarm Clock</title>
 
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -29,6 +29,6 @@
     </div>
 
   </div>
-  <script src="/js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
